tests/fixtures/invalid/pow_bytes_bool_int.py
# Cannot call pow() with Bytes, Bool, Int
x = pow(b"hello", True, 1)
